--- a/assets/less/wall.less
+++ b/assets/less/wall.less
@@ -72,11 +72,22 @@
         gap: 1.2rem;
         margin-top: 2rem;
 
-        a {
+        button {
+            cursor: pointer;
+            font-family: inherit;
+            background: none;
+            border: none;
             display: flex;
             align-items: center;
             gap: .5rem;
             color: @color-black-light;
+        }
+    }
+
+    &_comment.active {
+        color: @color-primary;
+        img {
+            content: url('../images/message-blue.svg');
         }
     }
 
@@ -102,13 +113,47 @@
         }
     }
 
-    form {
-        display: flex;
-        flex-direction: column;
+    &_add_form {
+        .outline_container();
+        margin: 2rem 0;
+        button[type='submit'] {
+            display: block;
+            margin-left: auto;
+        }
+    }
+
+    &_update_form {
+        > div {
+            display: flex;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 2rem;
+
+            a {
+                color: @color-black-light;
+            }
+        }
     }
 }
 
-.no_message {
+// .comment_actions {
+//     display: flex;
+//     gap: 1.2rem;
+//     margin-top: 2rem;
+
+//     button {
+//         cursor: pointer;
+//         font-family: inherit;
+//         background: none;
+//         border: none;
+//         display: flex;
+//         align-items: center;
+//         gap: .5rem;
+//         color: @color-black-light;
+//     }
+// }
+
+#no_message {
     margin-top: 20rem;
     text-align: center;
     p {
@@ -116,19 +161,21 @@
     }
 }
 
-.message_count {
+#message_count {
     color: @color-primary;
     font-weight: 600;
 }
 
 textarea {
     background: @color-primary-lightest;
-    padding: 1rem;
     border: 1px solid @color-grey-light-1;
-    outline: 0;
     color: @color-primary-dark;
-    width: 100%;
     margin-bottom: 2rem;
+    outline: 0;
+    padding: 1rem;
+    resize: none;
+    width: 100%;
+    height: 12rem;
 }
 
 .modal {
@@ -190,11 +237,11 @@ textarea {
     .modal_body {
         width: 54rem;
         form div {
-            margin-top: 3rem;
-            display: flex;
             align-items: center;
-            justify-content: center;
+            display: flex;
             gap: 2rem;
+            justify-content: center;
+            margin-top: 3rem;
 
             > * {
                 flex: 1;
