--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -6,8 +6,39 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico"/>
         <meta name="description" content="Register form of the wall assignment">
-        <meta name="author" content="Jhones Digno'">
+        <meta name="author" content="Jhones Digno">
+        <link rel="stylesheet/less" href="../assets/less/index.less">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/4.1.3/less.min.js" integrity="sha512-6gUGqd/zBCrEKbJqPI7iINc61jlOfH5A+SluY15IkNO1o4qP1DEYjQBewTB4l0U4ihXZdupg8Mb77VxqE+37dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="../assets/js/global.js"></script>
+        <script src="../assets/js/sign_up.js"></script>
+        <title>The Wall | Register Page</title>
     </head>
     <body>
+        <div class="container">
+            <div class="form_container">
+                <form action="/" id="register_form">
+                    <p class="form_title">The Wall</p>
+                    <h1>Register</h1>
+                    <div class="form_group">
+                        <label for="email">Email</label>
+                        <input type="text" name="email" id="email" placeholder="youremail@gmail.com">
+                    </div>
+                    <div class="form_group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" id="password">
+                    </div>
+                    <div class="form_group">
+                        <label for="confirm_password">Confirm Password</label>
+                        <input type="password" name="confirm_password" id="confirm_password">
+                    </div>
+                    <p class="form_policy">By creating an account, you agree with The Wall's <a href="#">Privacy Policy</a> and <a href="#">Terms of Use</a></p>
+                    <button type="submit" class="btn btn_primary">Sign Up</button>
+                    <p class="form_account">Already have an account ? <a href="/views">Sign In</a></p>
+                </form>
+            </div>
+            <div class="illustration_container">
+                <img src="../assets/images/main.svg" alt="Illustration of a man holding a paper">
+            </div>
+        </div>
     </body>
 </html>
