--- a/views/wall.html
+++ b/views/wall.html
@@ -5,12 +5,115 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico"/>
-        <meta name="description" content="Main page of the wall assignment">
-        <meta name="author" content="Jhones Digno'">
+        <meta name="description" content="Dashboard of the wall assignment">
+        <meta name="author" content="Jhones Digno">
         <link rel="stylesheet/less" href="../assets/less/wall.less">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/4.1.3/less.min.js" integrity="sha512-6gUGqd/zBCrEKbJqPI7iINc61jlOfH5A+SluY15IkNO1o4qP1DEYjQBewTB4l0U4ihXZdupg8Mb77VxqE+37dg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <title>The Wall | Main Page</title>
+        <script src="../assets/js/global.js"></script>
+        <script src="../assets/js/wall.js"></script>
+        <title>The Wall | Dashboard Page</title>
     </head>
     <body>
+        <nav class="nav">
+            <div class="container">
+                <p class="nav_title">The Wall Assignment</p>
+                <div class="nav_side">
+                    <p class="nav_name">Welcome, Jhones Digno</p>
+                    <a href="/views/">Logout</a>
+                </div>
+            </div>
+        </nav>
+
+        <div class="container">
+            <div class="main">
+                <div class="main_header">
+                    <p><span id="message_count">0</span> messages arranged by latest posted</p>
+                    <button class="btn btn_primary btn_small modal_btn" data-target="create_modal">Create Message</button>
+                </div>
+                <div id="messages_container">
+                    <div class="no_message">
+                        <img src="../assets/images/no-message.svg" alt="Empty basket">
+                        <p>No Posted Message Yet</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal" id="create_modal">
+            <div class="modal_body">
+                <p class="modal_title">Create a Message</p>
+                <form action="#" id="create_message_form">
+                    <textarea name="content" placeholder="Type your message here"></textarea>
+                    <div>
+                        <a href="#" class="modal_cancel">Cancel</a>
+                        <button type="submit" class="btn btn_primary btn_small" disabled>Post Message</button>
+                    </div>
+                </form>
+                <button class="modal_close"></button>
+            </div>
+        </div>
+        <div class="modal" id="delete_modal">
+            <div class="modal_body">
+                <p class="modal_title">Confirm Delete Message</p>
+                <p class="modal_desc">Are you sure you want to remove this message?</p>
+                <p>This action cannot be undone.</p>
+                <form action="#" id="delete_form">
+                    <div>
+                        <a href="#" class="modal_cancel">Cancel</a>
+                        <button type="submit" class="btn btn_primary btn_small">Yes, Remove It.</button>
+                    </div>
+                </form>
+                <button class="modal_close"></button>
+            </div>
+        </div>
+
+        <!-- To be clone -->
+
+        <!-- Message Template -->
+        <script type="text/html" id="message_template">
+            
+            <div class="message">
+                <div class="message_content">
+                    <p>Message Content</p>
+                    <div class="message_actions">
+                        <button class="message_comment">
+                            <img src="../assets/images/message.svg" alt="Message icon">
+                            <span>0</span> Comment
+                        </button>
+                        <button class="message_edit">
+                            <img src="../assets/images/pencil-write.svg" alt="Pencil icon">
+                            Edit
+                        </button>
+                        <button class="message_delete modal_btn" data-target="delete_modal">
+                            <img src="../assets/images/delete.svg" alt="Delete icon">
+                            Delete
+                        </button>
+                        <button class="message_user">
+                            <img src="../assets/images/user-placeholder.svg" alt="User icon">
+                            <span>You</span> - Few seconds ago                                
+                        </button>
+                    </div>
+                </div>
+                <div class="message_comments hide">
+                    <form action="#" class="message_form">
+                        <textarea name="content" placeholder="Type your comment here."></textarea>
+                        <button type="submit" class="btn btn_primary btn_small" disabled>Post Comment</button>
+                    </form>
+                    <div class="comments_container">
+                    </div>
+                </div>
+            </div>
+        </script>
+
+        <!-- Update Form Template -->
+        <script type="text/html" id="update_form_template">
+            <form action="#" class="update_form">
+                <textarea name="content"></textarea>
+                <div>
+                    <a href="#" class="cancel_edit">Cancel</a>
+                    <button type="submit" class="btn btn_primary btn_small">Update Message</button>
+                </div>
+            </form>
+        </script>
     </body>
 </html>
