--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -17,23 +17,23 @@
         <div class="container">
             <div class="form_container">
                 <form action="/" id="register_form">
-                    <p class="form_title">The Wall</p>
+                    <h4>The Wall</h4>
                     <h1>Register</h1>
                     <div class="form_group">
                         <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="youremail@gmail.com">
+                        <input tabindex="1" type="text" name="email" id="email" placeholder="youremail@gmail.com">
                     </div>
                     <div class="form_group">
                         <label for="password">Password</label>
-                        <input type="password" name="password" id="password">
+                        <input tabindex="2" type="password" name="password" id="password">
                     </div>
                     <div class="form_group">
                         <label for="confirm_password">Confirm Password</label>
-                        <input type="password" name="confirm_password" id="confirm_password">
+                        <input tabindex="3" type="password" name="confirm_password" id="confirm_password">
                     </div>
                     <p class="form_policy">By creating an account, you agree with The Wall's <a href="#">Privacy Policy</a> and <a href="#">Terms of Use</a></p>
-                    <button type="submit" class="btn btn_primary">Sign Up</button>
-                    <p class="form_account">Already have an account ? <a href="/views">Sign In</a></p>
+                    <button tabindex="4" type="submit" class="btn btn_primary">Sign Up</button>
+                    <p class="form_account">Already have an account ? <a href="/views" tabindex="5">Sign In</a></p>
                 </form>
             </div>
             <div class="illustration_container">
