--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* Colors */
 
@@ -65,6 +65,9 @@ button {
     display: none;
 }
 
+ul {
+    list-style-type: none;
+}
 /* Breakpoints */
 
 @bp-large: 90em ; /* 1440px/16px */
@@ -101,9 +104,8 @@ button {
         }
 
         &:hover:not(:disabled) {
-            background: @color-primary-dark;
-            box-shadow: @drop-shadow;
-            transform: scale(1.02);
+            box-shadow: @drop-shadow-light;
+            transform: scale(1.01);
         }
     }
 
