--- a/views/index.html
+++ b/views/index.html
@@ -17,18 +17,18 @@
         <div class="container">
             <div class="form_container">
                 <form action="#" id="login_form">
-                    <p class="form_title">The Wall</p>
+                    <h4>The Wall</h4>
                     <h1>Log In</h1>
                     <div class="form_group">
                         <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="youremail@gmail.com">
+                        <input tabindex="1" type="text" name="email" id="email" placeholder="youremail@gmail.com">
                     </div>
                     <div class="form_group">
                         <label for="password">Password <a href="#">Forgot Password ?</a></label>
-                        <input type="password" name="password" id="password">
+                        <input tabindex="2" type="password" name="password" id="password">
                     </div>
-                    <button type="submit" class="btn btn_primary">Sign In</button>
-                    <p class="form_account">I don't have an account ? <a href="/views/sign_up.html">Sign Up</a></p>
+                    <button tabindex="3" type="submit" class="btn btn_primary">Sign In</button>
+                    <p class="form_account">I don't have an account ? <a href="/views/sign_up.html" tabindex="4">Sign Up</a></p>
                 </form>
             </div>
             <div class="illustration_container">
