--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
                         <input tabindex="2" type="password" name="password" id="password">
                     </div>
                     <button tabindex="3" type="submit" class="btn btn_primary">Sign In</button>
-                    <p class="form_account">I don't have an account ? <a href="/views/sign_up.html" tabindex="4">Sign Up</a></p>
+                    <p class="form_footer">I don't have an account ? <a href="/views/sign_up.html" tabindex="4">Sign Up</a></p>
                 </form>
             </div>
             <div class="illustration_container">
