--- a/views/sign_up.html
+++ b/views/sign_up.html
@@ -33,7 +33,7 @@
                     </div>
                     <p class="form_policy">By creating an account, you agree with The Wall's <a href="#">Privacy Policy</a> and <a href="#">Terms of Use</a></p>
                     <button tabindex="4" type="submit" class="btn btn_primary">Sign Up</button>
-                    <p class="form_account">Already have an account ? <a href="/views" tabindex="5">Sign In</a></p>
+                    <p class="form_footer">Already have an account ? <a href="/views" tabindex="5">Sign In</a></p>
                 </form>
             </div>
             <div class="illustration_container">
