--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -4,17 +4,20 @@
 
 @color-primary: #2c6bff;
 @color-primary-dark: #152c61;
+@color-primary-darker: rgba(#152c61, .3);
 @color-primary-light: rgba(@color-primary, .51);
-@color-primary-lighter: #dce6ff;
-@color-primary-lightest: rgba(@color-primary, .08);
+@color-primary-lighter: rgba(@color-primary, .08);
+@color-primary-lightest: rgba(@color-primary, .05);
 
 @color-red: #e1554c;
 @color-red-light: rgba(@color-red, .08);
 
+@color-primary-border: #dce6ff;
+
 @color-white: #fff;
 @color-black: #000;
 @color-grey-1: rgba(@color-black, .2);
-@color-grey-2: rgba(@color-black, .6);
+@color-grey-2: rgba(@color-black, .5);
 @color-grey-3: #707070;
 @color-grey-4: #fbfbfb;
 
@@ -36,14 +39,15 @@
 html {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    font-size: 62.5%; 
+    font-size: 62.5%; /* 10px/62.5 -> 1rem = 10px */
     scroll-behavior: smooth;
-    /* 10px/62.5 -> 1rem = 10px */
 }
 
 body {
-    font-size: 1.6rem;
     background: @color-grey-4;
+    color: @color-primary-dark;
+    font-size: 1.6rem;
+    font-weight: 300;
 }
 
 a {
@@ -68,16 +72,17 @@ button {
 ul {
     list-style-type: none;
 }
+
 /* Breakpoints */
 
-@bp-large: 90em ; /* 1440px/16px */
-@bp-medium: 68.75em ; /* 1100px/16px */
-@bp-small: 43.75em ; /* 700px/16px */
+@bp-large: 80em; /* 1440px/16px */
+@bp-medium: 68.75em; /* 1100px/16px */
+@bp-small: 43.75em; /* 700px/16px */
 
 /* Mixins */
 
 .outline_container() {
-    border: 1px solid @color-primary-lighter;
+    border: 1px solid @color-primary-border;
     border-radius: .6rem;
     padding: 2.5rem;
 }
@@ -91,7 +96,7 @@ ul {
     cursor: pointer;
     font-family: inherit;
     font-size: inherit;
-    font-weight: 500;
+    font-weight: 600;
     padding: 1.5rem 4.5rem;
     transition: all .2s;
 
@@ -111,7 +116,6 @@ ul {
 
     &_small {
         padding: .7rem 3rem;
-        font-size: 1.6rem;
         text-transform: none;
         font-weight: 500;
     }
