--- a/assets/less/index.less
+++ b/assets/less/index.less
@@ -10,9 +10,10 @@
 
         form {
             border-radius: .6rem;
-            box-shadow: @drop-shadow;
+            box-shadow: @drop-shadow-light;
             margin: 0 auto;
             max-width: 45rem;
+            background: @color-white;
             padding: 4rem;
 
             h4 {
@@ -23,7 +24,6 @@
             }
 
             h1 {
-                color: @color-primary-dark;
                 font-size: 4rem;
                 font-weight: 600;
                 margin-bottom: 2rem;
@@ -37,7 +37,6 @@
     }
 
     .form {
-
         &_group {
             color: @color-primary-dark;
             display: flex;
@@ -50,7 +49,6 @@
             label {
                 align-items: center;
                 display: flex;
-                font-weight: 400;
                 justify-content: space-between;
                 margin-bottom: .5rem;
                 color: @color-primary-dark;
@@ -64,13 +62,15 @@
 
             input {
                 background: @color-primary-lighter;
-                border: none;
                 border-bottom: 2px solid transparent;
                 border-radius: .4rem;
+                border: 2px solid transparent;
                 font-size: 1.4rem;
-                font-weight: 500;
+                font-weight: 400;
+                height: 5.5rem;
                 outline: none;
                 padding: 1.7rem 1rem;
+
                 &.error {
                     background: @color-red-light;
                     &:focus {
@@ -80,6 +80,10 @@
 
                 &:focus {
                     border-bottom: 2px solid @color-primary;
+                }
+
+                &::placeholder {
+                    color: @color-primary-darker;
                 }
             }
         }
@@ -91,8 +95,9 @@
             margin-top: .5rem;
         }
         
-        &_account {
+        &_footer {
             color: @color-grey-1;
+            font-weight: 400;
             text-align: center;
         } 
 
@@ -100,6 +105,7 @@
             color: @color-primary-dark;
             margin-top: 3.3rem;
             text-align: center;
+            font-weight: 300;
         }
     }
 
@@ -120,7 +126,7 @@
         }
     }
 
-    #register_form{
+    #register_form {
         button[type="submit"] {
             display: block;
             margin: 3.5rem auto;
