--- a/assets/less/wall.less
+++ b/assets/less/wall.less
@@ -14,7 +14,6 @@
     .container {
         align-items: center;
         display: flex;
-        justify-content: space-between;
 
         @media only screen and (max-width: @bp-small) {
             flex-direction: column;
@@ -25,28 +24,30 @@
     &_title {
         font-size: 2.6rem;
         font-weight: 500;
+        margin-right: auto;
+        
+        @media only screen and (max-width: @bp-small) {
+            margin-right: 0;
+        }
     }
 
-    &_side {
-        display: flex;
-        gap: 2rem;
-        
-        a {
-            font-weight: 600;
-        }
+    a {
+        font-weight: 600;
+        margin-left: 2rem;
     }
 }
 
 .main {
     background: @color-white;
-    margin: 5rem 0;
-    min-height: 75vh;
-    padding: 7rem;
     box-shadow: @drop-shadow-light;
+    margin: 5rem auto;
+    min-height: 70vh;
+    padding: 7rem;
 
     @media only screen and (max-width: @bp-medium) {
         padding: 5rem;
     }
+
     @media only screen and (max-width: @bp-small) {
         padding: 3rem;
     }
@@ -58,13 +59,13 @@
         margin-bottom: 4.5rem;
 
         p {
-            color: @color-grey-2;
+            color: @color-grey-3;
         }
 
         @media only screen and (max-width: @bp-small) {
             flex-direction: column;
-            text-align: center;
             gap: 2rem;
+            text-align: center;
         }
     }
 }
@@ -80,15 +81,10 @@
         margin-bottom: 2rem;
     }
 
-    p {
-        color: @color-primary-dark;
-        font-weight: 300;
-    }
-
     &_actions {
-
         display: flex;
         flex-wrap: wrap;
+        font-weight: 400;
         gap: 1.2rem;
         margin-top: 2rem;
 
@@ -106,13 +102,24 @@
             font-size: 1.6rem;
             gap: .5rem;
 
+            img {
+                width: 2.4rem;
+                height: 2.4rem;
+            }
+
             @media screen and (max-width: @bp-small) {
                 font-size: 1.4rem;
             }
 
             &.message_edit {
                 color: @color-primary;
+
+                img {
+                    width: 3rem;
+                    height: 3rem;
+                }
             }
+
             &.message_comment.active {
                 color: @color-primary;
                 
@@ -120,6 +127,7 @@
                     content: url("../images/message-blue.svg");
                 }
             }
+
             &.message_user {
                 span {
                     font-weight: 500;
@@ -141,28 +149,27 @@
 }
 
 .update_form {
+    text-align: right;
 
-    > div {
-        align-items: center;            
-        display: flex;
-        gap: 2rem;
-        justify-content: flex-end;
-        margin-top: 1rem;
+    textarea {
+        margin-bottom: 2rem;
+    }
 
-        .cancel_edit {
-            background: none;
-            border: none;
-            color: @color-grey-2;
-            cursor: pointer;
-            font-size: 1.6rem;
-        }
+    .cancel_edit {
+        background: none;
+        border: none;
+        color: @color-grey-2;
+        cursor: pointer;
+        font-size: 1.6rem;
+        font-weight: 400;
+        margin-right: 3rem;
     }
 }
 
 textarea {
     background: @color-primary-lightest;
     border-radius: .6rem;
-    border: 1px solid @color-primary-lighter;
+    border: 1px solid @color-primary-border;
     color: @color-primary-dark;
     height: 8.4rem;
     outline: none;
@@ -177,7 +184,6 @@ textarea {
 
     &::placeholder {
         color: rgba(@color-primary-dark, .5);
-        font-weight: 300;
     }
 }
 
@@ -215,13 +221,14 @@ textarea {
         background: @color-white;
         border-radius: .6rem;
         margin: 10% auto;
+        width: 95%;
         max-width: 90rem;
         padding: 5rem;
         position: relative;
         text-align: center;
     }
 
-    &_title {
+    h4 {
         font-size: 2.6rem;
         font-weight: 500;
         margin-bottom: 3rem;
@@ -245,25 +252,21 @@ textarea {
         color: @color-grey-2;
         cursor: pointer;
         font-size: 1.6rem;
+        font-weight: 400;
+        margin-right: 2.4rem;
     }
 }
 
 #create_message_form {
-    > div {
-        align-items: center;
-        display: flex;
-        gap: 2.4rem;
-        justify-content: flex-end;
-        margin-top: 2rem;
-    }
+    text-align: right;
 
     textarea {
         height: 18.5rem;
         font-size: 1.6rem;
+        margin-bottom: 3rem;
 
         &::placeholder {
-            color: rgba(@color-primary-dark, .5);
-            font-weight: 300;
+            color: @color-primary-darker;
         }
     }
 }
@@ -271,8 +274,12 @@ textarea {
 #delete_message_modal,
 #delete_comment_modal {
     .modal_body {
-        width: 54rem;
+        max-width: 54rem;
         
+        p {
+            font-weight: 400;
+        }
+
         form {
             align-items: center;
             display: flex;
