More accurate colors

--- a/assets/less/global.less
+++ b/assets/less/global.less
@@ -4,20 +4,20 @@
 
 @color-primary: #2c6bff;
 @color-primary-dark: #152c61;
-@color-primary-darker: rgba(#152c61, .3);
-@color-primary-light: rgba(@color-primary, .51);
-@color-primary-lighter: rgba(@color-primary, .08);
-@color-primary-lightest: rgba(@color-primary, .05);
+@color-primary-darker: #acb7cf;
+@color-primary-light: #86a7f2;
+@color-primary-lighter: #eef4ff;
+@color-primary-lightest: #f5f8ff;
 
 @color-red: #e1554c;
-@color-red-light: rgba(@color-red, .08);
+@color-red-light: #fdf2f1;
 
 @color-primary-border: #dce6ff;
 
 @color-white: #fff;
 @color-black: #000;
-@color-grey-1: rgba(@color-black, .2);
-@color-grey-2: rgba(@color-black, .5);
+@color-grey-1: #ccc;
+@color-grey-2: #666;
 @color-grey-3: #707070;
 @color-grey-4: #fbfbfb;
 
