Alphabetized the css classes

--- a/views/wall.html
+++ b/views/wall.html
@@ -16,8 +16,8 @@
     <body>
         <nav class="nav">
             <div class="container">
-                <p class="nav_title">The Wall Assignment</p>
-                <p class="nav_name">Welcome, Jhones Digno!</p>
+                <h4 class="nav_title">The Wall Assignment</h4>
+                <p>Welcome, Jhones Digno!</p>
                 <a href="/views/">Logout</a>
             </div>
         </nav>
