--- a/assets/less/wall.less
+++ b/assets/less/wall.less
@@ -8,8 +8,8 @@
 .nav {
     background: @color-white;
     box-shadow: @drop-shadow-light;
-    padding: 3rem;
     color: @color-primary-dark;
+    padding: 3rem;
 
     .container {
         align-items: center;
@@ -103,8 +103,8 @@
             gap: .5rem;
 
             img {
-                width: 2.4rem;
                 height: 2.4rem;
+                width: 2.4rem;
             }
 
             @media screen and (max-width: @bp-small) {
@@ -115,8 +115,8 @@
                 color: @color-primary;
 
                 img {
-                    width: 3rem;
                     height: 3rem;
+                    width: 3rem;
                 }
             }
 
@@ -171,10 +171,10 @@ textarea {
     border-radius: .6rem;
     border: 1px solid @color-primary-border;
     color: @color-primary-dark;
+    font-size: 1.6rem;
     height: 8.4rem;
     outline: none;
     padding: 1rem;
-    font-size: 1.6rem;
     resize: none;
     width: 100%;
 
@@ -221,11 +221,11 @@ textarea {
         background: @color-white;
         border-radius: .6rem;
         margin: 10% auto;
-        width: 95%;
         max-width: 90rem;
         padding: 5rem;
         position: relative;
         text-align: center;
+        width: 95%;
     }
 
     h4 {
@@ -235,8 +235,7 @@ textarea {
     }
 
     &_close {
-        background: none;
-        background-image: url('../images/cancel.svg');
+        background: @color-white url('../images/cancel.svg') no-repeat center;
         border: none;
         cursor: pointer;
         height: 3.5rem;
@@ -261,8 +260,8 @@ textarea {
     text-align: right;
 
     textarea {
-        height: 18.5rem;
         font-size: 1.6rem;
+        height: 18.5rem;
         margin-bottom: 3rem;
 
         &::placeholder {
