--- a/views/wall.html
+++ b/views/wall.html
@@ -100,7 +100,7 @@
                         </button>
                     </div>
                 </div>
-                <form action="#" class="update_form hide">
+                <form action="#" class="update_message_form hide">
                     <textarea name="content" tabindex="1"></textarea>
                     <button type="button" class="cancel_edit" tabindex="3">Cancel</button>
                     <button type="submit" class="btn btn_primary btn_small" tabindex="2">Update Message</button>
@@ -114,25 +114,25 @@
                 </div>
             </li>
             <!-- Comment Template -->
-            <li class="message hide" id="comment_template">
-                <div class="message_content">
-                    <p>Message Content</p>
-                    <div class="message_actions">
-                        <button type="button" class="message_edit">
+            <li class="comment hide" id="comment_template">
+                <div class="comment_content">
+                    <p>Comment Content</p>
+                    <div class="comment_actions">
+                        <button type="button" class="comment_edit">
                             <img src="../assets/images/pencil-write.svg" alt="Pencil icon">
                             Edit
                         </button>
-                        <button type="button" class="message_delete modal_btn" data-target="delete_comment_modal">
+                        <button type="button" class="comment_delete modal_btn" data-target="delete_comment_modal">
                             <img src="../assets/images/delete.svg" alt="Delete icon">
                             Delete
                         </button>
-                        <button type="button" class="message_user">
+                        <button type="button" class="comment_user">
                             <img src="../assets/images/user-placeholder.svg" alt="User icon">
                             <span>You</span> - Few seconds ago                                
                         </button>
                     </div>
                 </div>
-                <form action="#" class="update_form hide">
+                <form action="#" class="update_comment_form hide">
                     <textarea name="content" tabindex="1"></textarea>
                     <button type="button" class="cancel_edit" tabindex="3">Cancel</button>
                     <button type="submit" class="btn btn_primary btn_small" tabindex="2">Update Comment</button>
